# LibSWBF2-redux

LibSWBF2/: API.cpp  API.h  CMakeLists.txt  Container.cpp  Container.h  Exceptions.h  Hashing.cpp  Hashing.h  InternalHelpers.cpp  InternalHelpers.h  dllmain.cpp  pch.h  req.h
LibSWBF2.NET/API/: APIWrapper.cs
LibSWBF2/Audio/: IMAADPCMDecoder.cpp  IMAADPCMDecoder.h  PCM16Decoder.cpp  PCM16Decoder.h  SoundDecoder.h
LibSWBF2/Chunks/: BaseChunk.cpp  BaseChunk.h  GenericChunk.cpp  GenericChunk.h  HeaderNames.cpp  HeaderNames.h  RawData.cpp  RawData.h  STR.cpp  STR.h  STRMULT.cpp  STRMULT.h
LibSWBF2/Chunks/LVL/: LVL.cpp  LVL.h  lvl_.cpp  lvl_.h
LibSWBF2/Chunks/MSH/: CYCL.cpp  CYCL.h  ENVL.cpp  ENVL.h  GEOM.cpp  GEOM.h  KFR3.cpp  KFR3.h  MATD.cpp  MATL.cpp  MATL.h  MODL.cpp  MSH.cpp  MSH2.cpp  MSH2.h  NRML.cpp  NRML.h  POSL.cpp  POSL.h  STRP.cpp  STRP.h  UV0L.cpp  UV0L.h  WGHT.cpp  WGHT.h
LibSWBF2/DirectX/: DXHelpers.cpp  DXHelpers.h  DXTexCrossPlat.cpp  DXTexCrossPlatConverters.cpp
LibSWBF2/IO/: FileReader.h  FileWriter.cpp  FileWriter.h  MemoryMappedReader.cpp  MemoryMappedReader.h  StreamReader.cpp  StreamReader.h
LibSWBF2/Logging/: Logger.cpp  Logger.h  LoggerEntry.cpp  LoggerEntry.h
LibSWBF2/Tests/: CMakeLists.txt  addon_level.c  parse_level.c  parse_level.cpp  standard_level.c
LibSWBF2/Types/: Animation.cpp  Animation.h  BoneFrames.cpp  BoneFrames.h  Color4.cpp  Color4.h  Color4u8.cpp  Color4u8.h  Curve.h  Enums.cpp  Enums.h  LocalizeEntry.cpp  LocalizeEntry.h  Matrix3x3.cpp  Matrix3x3.h  Planning.cpp  Planning.h  Polygon.h  SoundBankHeader.cpp  SoundBankHeader.h  SoundClip.cpp  SoundClip.h  TerrainBufferEntry.cpp  TerrainBufferEntry.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector3u8.cpp  Vector3u8.h  Vector4.cpp  Vector4.h  WorldAnimationKey.cpp  WorldAnimationKey.h
LibSWBF2/Wrappers/: AnimationBank.cpp  AnimationBank.h  AnimationSkeleton.cpp  AnimationSkeleton.h  CollisionMesh.cpp  CollisionMesh.h  CollisionPrimitive.cpp  CollisionPrimitive.h  Config.cpp  Config.h  EntityClass.cpp  EntityClass.h  Instance.cpp  Instance.h  Level.cpp  Level.h  Localization.cpp  Localization.h  Material.cpp  Material.h  Model.cpp  Model.h  PlanSet.cpp  PlanSet.h  Script.cpp  Script.h  Segment.cpp  Segment.h  Sound.cpp  Sound.h  SoundBank.cpp  SoundBank.h  SoundStream.cpp  SoundStream.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  World.cpp  World.h
(+180 files in other folders)
